# docs/swagger.yaml
@@ -114,4 +114,32 @@ paths:
       summary: sites of current user
       tags:
       - sites
+    post:
+      description: takes a list of sites and stores the supplied sites for the user
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/core.ProblemDetail'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/core.ProblemDetail'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/core.ProblemDetail'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/core.ProblemDetail'
+      summary: stores the given sites
+      tags:
+      - sites
 swagger: "2.0"
